--- a/about.html
+++ b/about.html
@@ -2,11 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="utf-8"/>
+    <link href="main.css" rel="stylesheet" />
 <title>Page Title</title>
     </head>
 <body>
 
 <h1>Brandon Saucedo</h1>
+     <img src="https://cdn140.picsart.com/13405102-87fa-4982-a8ae-1021f2467ccf/387521539017900.png?to=crop&type=webp&r=768x1276&q=85" width="150" height="200" class="center" alt="El Gato">
 <nav>
 <ul>
     <li><a href="index.html">Home</a></li>
@@ -14,7 +16,7 @@
     <li><a href="#">School</a></li>
     </ul>
     </nav>
-    
+<section>
 <h2>Education Goals</h2>
 <ol>
     <li>Complete general eduation.</li>
@@ -27,6 +29,7 @@
     <li>Quick learner.</li>
     <li>I can curve a bowling ball.</li>
     </ol>
+    </section>
     <footer> Last updated on June 29th. <br>
         <a href="mailto:saucedobrandon61@gmail.com">Email me!</a>
     </footer>
