--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
     <li>I can curve a bowling ball.</li>
     </ol>
     </section>
-    <footer> Last updated on June 29th. <br>
+    <footer> Last updated on July 1st. <br>
         <a href="mailto:saucedobrandon61@gmail.com">Email me!</a>
     </footer>
     </body>
