--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <p>My favorite website is <a href="https://netflix.com">Netflix</a> because it has a variety of movies and shows that I enjoy watching.</p>
 </section>
     
-    <footer> Last updated on June 29th. <br>
+    <footer> Last updated on July 1st. <br>
         <a href="mailto:saucedobrandon61@gmail.com">Email me!</a>
     </footer>
     </body>
