--- a/about.html
+++ b/about.html
@@ -6,17 +6,17 @@
 <title>Page Title</title>
     </head>
 <body>
-
-<h1>Brandon Saucedo</h1>
-     <img src="https://cdn140.picsart.com/13405102-87fa-4982-a8ae-1021f2467ccf/387521539017900.png?to=crop&type=webp&r=768x1276&q=85" width="150" height="200" class="center" alt="El Gato">
+<div>
+<h1>Brandon Saucedo</h1></div>
+    
 <nav>
 <ul>
     <li><a href="index.html">Home</a></li>
     <li><a href="about.html">About</a></li>
-    <li><a href="#">School</a></li>
+    <li><a href="school.html">School</a></li>
     </ul>
     </nav>
-<section>
+<section id="rightColumn">
 <h2>Education Goals</h2>
 <ol>
     <li>Complete general eduation.</li>
@@ -30,7 +30,7 @@
     <li>I can curve a bowling ball.</li>
     </ol>
     </section>
-    <footer> Last updated on July 1st. <br>
+    <footer> Last updated on July 1st.
         <a href="mailto:saucedobrandon61@gmail.com">Email me!</a>
     </footer>
     </body>
