--- a/index.html
+++ b/index.html
@@ -6,16 +6,19 @@
 <title>Page Title</title>
     </head>
 <body>
-
+<div>
 <h1>Brandon Saucedo</h1>
-    <img src="https://cdn140.picsart.com/13405102-87fa-4982-a8ae-1021f2467ccf/387521539017900.png?to=crop&type=webp&r=768x1276&q=85" width="150" height="200" class="center" alt="El Gato">
+</div>
+
 <nav>
 <ul>
     <li><a href="index.html">Home</a></li>
     <li><a href="about.html">About</a></li>
-    <li><a href="#">School</a></li>
+    <li><a href="school.html">School</a></li>
     </ul>
     </nav>
+     <div id="elgato"><img src="https://cdn140.picsart.com/13405102-87fa-4982-a8ae-1021f2467ccf/387521539017900.png?to=crop&type=webp&r=768x1276&q=85" width="150" height="200" class="center" alt="El Gato">
+         </div>
 <section>
 <h2>About Me</h2>    
 <p>Hi my name is Brandon Saucedo, I'm a sophomore now in Cerritos College. I turned 19 this year and I'm majoring in Computer Science. I hope to have a job in tech in the future and have a job that I enjoy. I have no previous experience with coding or anything of the sort so I'm very excited to finally be learning after taking my prerequisites. This class is done online within the span of a month so I understand it'll be very fast paced and difficult. I hope to learn to the best of my ability.</p>
@@ -30,10 +33,13 @@
     
     <p>My favorite website is <a href="https://netflix.com">Netflix</a> because it has a variety of movies and shows that I enjoy watching.</p>
 </section>
+    <br>
+    <br>
     
-    <footer> Last updated on July 1st. <br>
+    <footer> Last updated on July 1st. 
         <a href="mailto:saucedobrandon61@gmail.com">Email me!</a>
     </footer>
     </body>
+
 
     </html>  
